--- a/recomendation.html
+++ b/recomendation.html
@@ -30,14 +30,14 @@
         <nav
           class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 cursor-pointer font-bold hover:text-gray-900" href="/"
+          <a class="mr-5 cursor-pointer hover:text-gray-900" href="/"
             >Библиотека</a
           >
           <a class="mr-5 cursor-pointer hover:text-gray-900" href="/top.html"
             >Топ 50</a
           >
           <a
-            class="mr-5 cursor-pointer hover:text-gray-900"
+            class="mr-5 font-bold cursor-pointer hover:text-gray-900"
             href="/recomendation.html"
             >Хочу книгу</a
           >
@@ -56,7 +56,25 @@
       </div>
     </header>
 
-    <h1 class="flex justify-center text-4xl font-bold">Библиотека</h1>
+    <h1 class="flex justify-center text-4xl font-bold">Хочу книгу</h1>
+
+    <labels
+      for="bookInput"
+      class="relative block mx-16 my-4 overflow-hidden rounded-md border border-gray-200 px-3 pt-3 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+    >
+      <input
+        type="text"
+        id="bookInput"
+        placeholder="Название книги"
+        class="peer h-8 w-full border-none bg-transparent p-0 placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0 sm:text-sm"
+      />
+
+      <span
+        class="absolute start-3 top-3 -translate-y-1/2 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-3 peer-focus:text-xs"
+      >
+        Название книги
+      </span>
+    </labels>
 
     <main class="grid px-20 py-8 grid-cols-4 gap-4">
       <div class="block shadow-md rounded-md p-4 relative">
