--- a/top.html
+++ b/top.html
@@ -30,10 +30,12 @@
         <nav
           class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 cursor-pointer font-bold hover:text-gray-900" href="/"
+          <a class="mr-5 cursor-pointer hover:text-gray-900" href="/"
             >Библиотека</a
           >
-          <a class="mr-5 cursor-pointer hover:text-gray-900" href="/top.html"
+          <a
+            class="mr-5 cursor-pointer font-bold hover:text-gray-900"
+            href="/top.html"
             >Топ 50</a
           >
           <a
@@ -56,7 +58,7 @@
       </div>
     </header>
 
-    <h1 class="flex justify-center text-4xl font-bold">Библиотека</h1>
+    <h1 class="flex justify-center text-4xl font-bold">Топ 50s</h1>
 
     <main class="grid px-20 py-8 grid-cols-4 gap-4">
       <div class="block shadow-md rounded-md p-4 relative">
