--- a/1.html
+++ b/1.html
@@ -21,7 +21,7 @@
       >
         <a
           class="flex gap-2 title-font font-medium items-center text-gray-900 mb-4 md:mb-0 cursor-pointer"
-          href="/"
+          href="./"
         >
           <i class="text-3xl fa-solid fa-book"></i>
 
