--- a/sign-up.html
+++ b/sign-up.html
@@ -20,7 +20,7 @@
         class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
       >
         <a
-          href="/"
+          href="./"
           class="flex items-center gap-2 mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
         >
           <i class="fa-solid fa-book"></i>
@@ -91,7 +91,7 @@
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                 Уже есть аккаунт?
                 <a
-                  href="/login"
+                  href="./login"
                   class="font-medium text-purple-600 hover:underline dark:text-purple-500"
                   >Вход</a
                 >
