--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       >
         <a
           class="flex gap-2 title-font font-medium items-center text-gray-900 mb-4 md:mb-0 cursor-pointer"
-          href="/"
+          href="./"
         >
           <i class="text-3xl fa-solid fa-book"></i>
 
@@ -30,20 +30,20 @@
         <nav
           class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 cursor-pointer font-bold hover:text-gray-900" href="/"
+          <a class="mr-5 cursor-pointer font-bold hover:text-gray-900" href="./"
             >Библиотека</a
           >
-          <a class="mr-5 cursor-pointer hover:text-gray-900" href="/top.html"
+          <a class="mr-5 cursor-pointer hover:text-gray-900" href="./top.html"
             >Топ 50</a
           >
           <a
             class="mr-5 cursor-pointer hover:text-gray-900"
-            href="/recomendation.html"
+            href="./recomendation.html"
             >Хочу книгу</a
           >
           <a
             class="mr-5 cursor-pointer hover:text-gray-900"
-            href="/my-books.html"
+            href="./my-books.html"
             >Избранное</a
           >
         </nav>
@@ -80,7 +80,7 @@
 
         <div class="mt-2 flex gap-4 justify-between">
           <a
-            href="/1.html"
+            href="./1.html"
             class="inline-flex transition-all gap-2 items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
           >
             Подробнее
