--- a/top.html
+++ b/top.html
@@ -60,7 +60,9 @@
 
     <h1 class="flex justify-center text-4xl font-bold">Топ 50s</h1>
 
-    <main class="grid px-20 py-8 grid-cols-4 gap-4">
+    <main
+      class="flex flex-wrap md:justify-between justify-center px-20 py-8 gap-4"
+    >
       <div class="block shadow-md rounded-md p-4 relative">
         <img
           alt="Art"
