--- a/index.html
+++ b/index.html
@@ -58,7 +58,150 @@
 
     <h1 class="flex justify-center text-4xl font-bold">Библиотека</h1>
 
-    <main class="grid px-20 py-8 grid-cols-4 gap-4">
+    <labels
+      for="bookInput"
+      class="relative block mx-16 my-4 overflow-hidden rounded-md border border-gray-200 px-3 pt-3 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600"
+    >
+      <input
+        type="text"
+        id="bookInput"
+        placeholder="Название книги"
+        class="peer h-8 w-full border-none bg-transparent p-0 placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0 sm:text-sm"
+      />
+
+      <span
+        class="absolute start-3 top-3 -translate-y-1/2 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-3 peer-focus:text-xs"
+      >
+        Название книги
+      </span>
+    </labels>
+
+    <main
+      class="flex flex-wrap md:justify-between justify-center px-20 py-8 gap-4"
+    >
+      <div class="block sm:w-auto w-full shadow-md rounded-md p-4 relative">
+        <img
+          alt="Art"
+          src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          class="h-64 w-full rounded-sm object-cover sm:h-80 lg:h-96"
+        />
+
+        <div
+          class="absolute top-2 right-2 px-2 py-1 bg-green-500 bg-opacity-80 rounded-full"
+        >
+          <i class="fa-solid fa-smile"></i>
+        </div>
+
+        <h3 class="mt-4 text-lg font-bold text-gray-900 sm:text-xl">
+          Сюда заголовок книги
+        </h3>
+
+        <p class="mt-2 max-w-sm text-gray-700">А сюда автор</p>
+
+        <div class="mt-2 flex gap-4 justify-between">
+          <a
+            href="./1.html"
+            class="inline-flex transition-all gap-2 items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
+          >
+            Подробнее
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+
+          <div>
+            <button class="p-2 text-xl transition-all hover:text-red-500">
+              <i class="fa-regular fa-heart"></i>
+            </button>
+            <button
+              class="p-2 text-xl text-red-400 transition-all hover:text-red-500"
+            >
+              <i class="fa-solid fa-heart"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="block shadow-md rounded-md p-4 relative">
+        <img
+          alt="Art"
+          src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          class="h-64 w-full rounded-sm object-cover sm:h-80 lg:h-96"
+        />
+
+        <div
+          class="absolute top-2 right-2 px-2 py-1 bg-green-500 bg-opacity-80 rounded-full"
+        >
+          <i class="fa-solid fa-smile"></i>
+        </div>
+
+        <h3 class="mt-4 text-lg font-bold text-gray-900 sm:text-xl">
+          Сюда заголовок книги
+        </h3>
+
+        <p class="mt-2 max-w-sm text-gray-700">А сюда автор</p>
+
+        <div class="mt-2 flex gap-4 justify-between">
+          <a
+            href="./1.html"
+            class="inline-flex transition-all gap-2 items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
+          >
+            Подробнее
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+
+          <div>
+            <button class="p-2 text-xl transition-all hover:text-red-500">
+              <i class="fa-regular fa-heart"></i>
+            </button>
+            <button
+              class="p-2 text-xl text-red-400 transition-all hover:text-red-500"
+            >
+              <i class="fa-solid fa-heart"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="block shadow-md rounded-md p-4 relative">
+        <img
+          alt="Art"
+          src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          class="h-64 w-full rounded-sm object-cover sm:h-80 lg:h-96"
+        />
+
+        <div
+          class="absolute top-2 right-2 px-2 py-1 bg-green-500 bg-opacity-80 rounded-full"
+        >
+          <i class="fa-solid fa-smile"></i>
+        </div>
+
+        <h3 class="mt-4 text-lg font-bold text-gray-900 sm:text-xl">
+          Сюда заголовок книги
+        </h3>
+
+        <p class="mt-2 max-w-sm text-gray-700">А сюда автор</p>
+
+        <div class="mt-2 flex gap-4 justify-between">
+          <a
+            href="./1.html"
+            class="inline-flex transition-all gap-2 items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
+          >
+            Подробнее
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+
+          <div>
+            <button class="p-2 text-xl transition-all hover:text-red-500">
+              <i class="fa-regular fa-heart"></i>
+            </button>
+            <button
+              class="p-2 text-xl text-red-400 transition-all hover:text-red-500"
+            >
+              <i class="fa-solid fa-heart"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <div class="block shadow-md rounded-md p-4 relative">
         <img
           alt="Art"
@@ -100,6 +243,24 @@
         </div>
       </div>
     </main>
+
+    <div class="pagination flex justify-center">
+      <a
+        href="#"
+        class="inline-flex gap-2 items-center px-4 py-2 mr-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+      >
+        <i class="fa-solid fa-arrow-left"></i>
+
+        Предыдущая
+      </a>
+      <a
+        href="#"
+        class="inline-flex gap-2 items-center px-4 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+      >
+        Следующая
+        <i class="fa-solid fa-arrow-right"></i>
+      </a>
+    </div>
 
     <footer class="text-gray-600 body-font">
       <div
