--- a/my-books.html
+++ b/my-books.html
@@ -57,8 +57,10 @@
     </header>
 
     <h1 class="flex justify-center text-4xl font-bold">Избранное</h1>
-    <div class="flex justify-between gap-2">
-      <main class="grid h-fit px-8 py-8 grid-cols-3 gap-4">
+    <section class="grid grid-cols-3 justify-between gap-2">
+      <main
+        class="flex col-start-1 col-end-3 flex-wrap md:justify-between justify-center px-16 py-8 gap-4"
+      >
         <div class="flex flex-col shadow-md rounded-md p-4 relative">
           <img
             alt="Art"
@@ -171,8 +173,10 @@
           </div>
         </div>
       </main>
-      <div class="flex flex-col gap-4">
-        <h2 class="flex justify-center text-xl font-bold">Рекомендуем вам</h2>
+      <div class="flex w-full flex-col gap-4">
+        <h2 class="flex w-full justify-center text-xl font-bold">
+          Рекомендуем вам
+        </h2>
         <main class="grid px-8 py-8 grid-cols-1 gap-4">
           <!-- Сюда реки -->
           <div class="block shadow-md rounded-md p-4 relative">
@@ -252,7 +256,7 @@
           </div>
         </main>
       </div>
-    </div>
+    </section>
 
     <footer class="text-gray-600 body-font">
       <div
