--- a/recomendation.html
+++ b/recomendation.html
@@ -76,7 +76,9 @@
       </span>
     </labels>
 
-    <main class="grid px-20 py-8 grid-cols-4 gap-4">
+    <main
+      class="flex flex-wrap md:justify-between justify-center px-20 py-8 gap-4"
+    >
       <div class="block shadow-md rounded-md p-4 relative">
         <img
           alt="Art"
