--- a/rec-sys-master/index.html
+++ b/rec-sys-master/index.html
@@ -46,6 +46,11 @@
             href="./my-books.html"
             >Избранное</a
           >
+          <a
+            class="mr-5 cursor-pointer hover:text-gray-900"
+            href="./classic.html"
+            >Классика</a
+          >
         </nav>
         <a
           class="inline-flex transition-all gap-2 items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
